--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name="br.com.jessicaraissapessoa.fpbmapsapp.ui.TelaInicialActivity" />
+        <activity android:name="br.com.jessicaraissapessoa.fpbmapsapp.ui.PerfilActivity" />
     </application>
 
 </manifest>
